<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    android:weightSum="2"
    android:background="@color/background_color"
    tools:context=".MathActivity">

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:clipToPadding="false">

        <androidx.cardview.widget.CardView
            android:id="@+id/additionCardViewId"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:clickable="true"
            android:layout_margin="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:tag="+"
            android:onClick="choosMath">

            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/addition_icon"
                    android:background="@color/material_deep_purple"
                    android:padding="10dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/material_deep_purple">

                </View>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mAddition"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:layout_marginTop="5dp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/subtractionCardViewId"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:clickable="true"
            android:layout_margin="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:tag="-"
            android:onClick="choosMath">

            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/subtraction_icon"
                    android:background="@color/colorAccent"
                    android:padding="10dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/colorAccent">

                </View>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mSubtraction"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:layout_marginTop="5dp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>



    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:clipToPadding="false">

        <androidx.cardview.widget.CardView
            android:id="@+id/multiplyCardViewId"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:tag="*"
            android:layout_margin="10dp"
            android:onClick="choosMath">

            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/multiplication_icon"
                    android:background="@color/material_blue"
                    android:padding="10dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/material_blue">

                </View>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mMultiplication"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:layout_marginTop="5dp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/divisionCardViewId"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:tag="/"
            android:layout_margin="10dp"
            android:onClick="choosMath">

            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/division_icon"
                    android:background="@color/material_green"
                    android:padding="10dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/material_green">

                </View>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mDivision"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:layout_marginTop="5dp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>


</LinearLayout>